--- a/style.css
+++ b/style.css
@@ -18,10 +18,17 @@ body, html{
     flex:1;
 }
 
+.color-picker{
+    width: 200px;
+}
+
 .options{
     display: flex;
     flex-direction: column;
     width: 200px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 20px;
     margin-right: 20px;
     }
 
@@ -31,12 +38,21 @@ body, html{
     display: flex;
     flex-direction: column;
     flex:1;
-    background-color: black;
-    padding: 20px;
-
+    margin: 20px;
+    border: 5px solid yellow;
     }
 
+.row{
+    display: flex;
+    flex:1;
+    width: 100%;
+    height: 100%;
+    }
 
+.columns{
+    background-color: black;
+    flex:1;
+}
 .footer{
     margin-top: auto;
     text-align: center;
